2010-08-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/functions/seq_along.h: added seq(int,int) to 
	mimic the R syntax : seq( 0, 5 )
	
	* inst/include/Rcpp/sugar/Range.h: fixed compiler confusion
	
	* inst/include/Rcpp/stats: new sugar functions Rcpp::stats::dpois and
	Rcpp::stats::dbinom inspired by Richard Chandler post on Rcpp-devel:
	http://lists.r-forge.r-project.org/pipermail/rcpp-devel/2010-August/000940.html

2010-08-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/: rework sugar matrix so that operator()(int,int)
	is always used instead of operator[](int)
	
	* inst/include/Rcpp/sugar/matrix/outer.h: new implementation based on 
	LazyVector, so that the value from the vector expression is only 
	retrieved once

2010-08-02  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/XPtr.h: give default values to tag and prot in XPtr ctor

2010-07-30  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-quickref/* : new vignette Rcpp-quickref: quick reference guide
	to Rcpp API

2010-07-28  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/exp.h: adapt to stricter standards on solaris/suncc

2010-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.5

	* debian/*: Similarly updated for new release to Debian

2010-07-17  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: faster lhs use of names, only
 	using callback to R if necessary. (discovered while profiling
	RProtoBuf)

	* inst/include/Rcpp/RObject.h : faster lhs and rhs use of
	RObject::slot, using R API functions R_do_slot and R_do_slot_assign

2010-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Small fix which may make Solaris/SunStudio happy

2010-07-16  Romain Francois <romain@r-enthusiasts.com>

	* man/Rcpp-package.Rd : removed old content and point to the
	Rcpp-package vignette for current guidelines.
